# spl-token-from-scratch

./: Cargo.toml
programs/token/: Cargo.toml
programs/token/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/token/src/processor/: approve.rs  burn.rs  close_account.rs  freeze_account.rs  initialize_account.rs  initialize_mint.rs  initialize_multisig.rs  mint_to.rs  mod.rs  revoke.rs  set_authority.rs  thaw_account.rs  transfer.rs
programs/token/src/state/: account.rs  mint.rs  mod.rs  multisig.rs
programs/token/src/utils/: assertions.rs  authority.rs  mod.rs
tests/: integration_tests.rs
